Fix: Some status too long on some streams for the panel items Fix: Avoid to update live status when the JSON data received is an error

--- a/data/panel.css
+++ b/data/panel.css
@@ -57,7 +57,7 @@ header button {
 	color: #FFFFFF;
 }
 .item-stream {
-	max-height: 4.3em; /*40px;*/
+	max-height: 5.3em;
 	margin: 0.5em 0px;
 	padding: 1em;
 	padding-left: 35px;
@@ -75,7 +75,7 @@ header button {
 	display: block;
 }
 .item-stream > span.streamStatus{
-	max-height: 2.7em;
+	max-height: 3.7em;
 	overflow: hidden;
 }
 #streamListOnline, #streamListOffline{
